# FlaskFactor

./: .flake8  .gitignore  LICENCE.md  README.md  __init__.py  app.py  config.py  create_user.py  db-notes.md  factor.sqlite  init_data.py  models.py  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py  wsgi.py
app/characters/: characters.py
app/data/: factor.sqlite
app/home/: home.py
app/models/: __init__.py  character.py  item.py  item_type.py  party.py  player.py  user.py
app/players/: players.py
app/routes/: characters.py  home.py  parties.py  players.py  users.py
app/users/: users.py
characters/: characters.py
characters/templates/: character_list.html
data/: factor.sqlite
migrations/versions/: 22f7328fbb42_baseline.py  5509f24447c0_baseline.py  619aa8dfa603_add_receiving_table.py  82c076493146_baseline.py  880cb2887ffb_baseline.py  8e23cdaf3a9e_baseline.py  abace2ed5c58_add_is_active.py  b27738eaa89e_playerchanges.py
models/: character.py  user.py
src/: __init__.py  models.py
src/routes/: auth.py  characters.py  errors.py  home.py  parties.py  players.py  receiving.py  users.py
src/templates/: home.html  party.html  player.html  receiving.html
src/utility/: setting.py
templates/: hello.html  index.html  user_add.html
templates/layout/: base.html  navbar.html
tests/: conftest.py  test_auth.py  test_base.py  test_character.py  test_home.py  test_login.py  test_party.py  test_players.py  test_receiving.py  test_setting.py  test_user.py
users/: user.py  users.py
web/: __init__.py  models.py
(+56 files in other folders)
