[tool.poetry]
name = "flaskfactor"
version = "0.1.0"
description = ""
authors = ["Evan Young <cantis@gmail.com>"]
license = "licence.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-login = "^0.6.2"
flask-wtf = "^1.0.1"
flask-sqlalchemy = "^3.0.2"
wtforms-sqlalchemy = "^0.3"
flask-bootstrap = "^3.3.7.1"
flask-fontawesome = "^0.1.5"
flask-migrate = "^4.0.1"
pytest = "^7.2.0"
flake8 = "^6.0.0"
python-dotenv = "^0.21.0"
email-validator = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
